Added basic ItemPackLoader

--- a/SoA/SOA.vcxproj
+++ b/SoA/SOA.vcxproj
@@ -593,6 +593,7 @@ EXIT 0</Command>
     <ClInclude Include="ImageAssetLoader.h" />
     <ClInclude Include="InventoryComponentLoader.h" />
     <ClInclude Include="IRenderStage.h" />
+    <ClInclude Include="ItemPackLoader.h" />
     <ClInclude Include="LenseFlareRenderer.h" />
     <ClInclude Include="LiquidVoxelRenderStage.h" />
     <ClInclude Include="LoadContext.h" />
@@ -819,6 +820,7 @@ EXIT 0</Command>
     <ClCompile Include="ImageAssetLoader.cpp" />
     <ClCompile Include="InventoryComponentLoader.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemPackLoader.cpp" />
     <ClCompile Include="LenseFlareRenderer.cpp" />
     <ClCompile Include="LiquidVoxelRenderStage.cpp" />
     <ClCompile Include="ExposureCalcRenderStage.cpp" />
