--- a/SoA/SOA.vcxproj
+++ b/SoA/SOA.vcxproj
@@ -665,7 +665,7 @@ EXIT 0</Command>
     <ClInclude Include="Startup.h" />
     <ClInclude Include="svd.h" />
     <ClInclude Include="SystemARRenderer.h" />
-    <ClInclude Include="SystemBodyLoader.h" />
+    <ClInclude Include="SpaceSystemBodyLoader.h" />
     <ClInclude Include="TerrainPatchMeshManager.h" />
     <ClInclude Include="SpaceSystemComponentTables.h" />
     <ClInclude Include="SphericalVoxelComponentUpdater.h" />
@@ -880,7 +880,7 @@ EXIT 0</Command>
     <ClCompile Include="Startup.cpp" />
     <ClCompile Include="svd.cpp" />
     <ClCompile Include="SystemARRenderer.cpp" />
-    <ClCompile Include="SystemBodyLoader.cpp" />
+    <ClCompile Include="SpaceSystemBodyLoader.cpp" />
     <ClCompile Include="TerrainPatchMeshManager.cpp" />
     <ClCompile Include="SpaceSystemComponentTables.cpp" />
     <ClCompile Include="SphericalVoxelComponentUpdater.cpp" />
