--- a/SoA/SOA.vcxproj.filters
+++ b/SoA/SOA.vcxproj.filters
@@ -557,9 +557,6 @@
     <ClInclude Include="soaUtils.h">
       <Filter>SOA Files</Filter>
     </ClInclude>
-    <ClInclude Include="SystemARRenderer.h">
-      <Filter>SOA Files\Rendering\Universe</Filter>
-    </ClInclude>
     <ClInclude Include="MTRenderState.h">
       <Filter>SOA Files\Rendering</Filter>
     </ClInclude>
@@ -881,6 +878,9 @@
     <ClInclude Include="SpaceSystemBodyLoader.h">
       <Filter>SOA Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="SpaceSystemARRenderer.h">
+      <Filter>SOA Files\Rendering\Universe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -1186,9 +1186,6 @@
     <ClCompile Include="TerrainPatch.cpp">
       <Filter>SOA Files\Game\Universe</Filter>
     </ClCompile>
-    <ClCompile Include="SystemARRenderer.cpp">
-      <Filter>SOA Files\Rendering\Universe</Filter>
-    </ClCompile>
     <ClCompile Include="MTRenderStateManager.cpp">
       <Filter>SOA Files\Rendering</Filter>
     </ClCompile>
@@ -1452,6 +1449,9 @@
     </ClCompile>
     <ClCompile Include="SpaceSystemBodyLoader.cpp">
       <Filter>SOA Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="SpaceSystemARRenderer.cpp">
+      <Filter>SOA Files\Rendering\Universe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
