--- a/SoA/SOA.vcxproj.filters
+++ b/SoA/SOA.vcxproj.filters
@@ -872,6 +872,9 @@
     <ClInclude Include="OrbitRenderer.h">
       <Filter>SOA Files\Rendering\Components</Filter>
     </ClInclude>
+    <ClInclude Include="SoaThreads.h">
+      <Filter>SOA Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -1437,6 +1440,9 @@
     </ClCompile>
     <ClCompile Include="OrbitRenderer.cpp">
       <Filter>SOA Files\Rendering\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="SoaThreads.cpp">
+      <Filter>SOA Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
